[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Player/Hunter.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Hunter/Run/6.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Hunter/Run/7.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Hunter/Run/8.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Hunter/Run/9.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Hunter/Run/10.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Hunter/Run/4.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/Hunter/Run/1.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Hunter/Run/3.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/Hunter/Run/5.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.5, 71.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Hunter" type="KinematicBody2D"]
position = Vector2( 114, 552 )
scale = Vector2( 0.917217, 0.917217 )
collision_layer = 256
collision_mask = 2147483904
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.5, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( -0.151, 0.151 )
frames = SubResource( 2 )
animation = "Idle"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/Run = SubResource( 3 )

[node name="HPBar" type="ProgressBar" parent="."]
margin_left = -40.0
margin_top = -90.0
margin_right = 37.0
margin_bottom = -76.0
rect_pivot_offset = Vector2( 40, 90 )

[node name="BombCD" type="Label" parent="."]
visible = false
margin_left = -40.0
margin_top = -128.0
margin_bottom = -114.0
rect_pivot_offset = Vector2( 40, 128 )

[node name="MaxTraps" type="Label" parent="."]
visible = false
margin_left = -40.0
margin_top = -108.0
margin_bottom = -94.0
rect_pivot_offset = Vector2( 40, 108 )

[node name="BombCDTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2( 0, -90 )
zoom = Vector2( 0.4, 0.4 )

[connection signal="timeout" from="BombCDTimer" to="." method="_on_BombCDTimer_timeout"]
